--- a/qa-ui-automation/serenity.properties
+++ b/qa-ui-automation/serenity.properties
@@ -2,7 +2,7 @@ webdriver.driver = chrome
 webdriver.chrome.driver = //Users//vignesh//PmkrHaulHubDemo///qa-ui-automation//drivers//chromedriver
 
 #tests to run against headless chrome (added by vignesh nehru)
-chrome.switches=--window-size=1920,1080;--headless;
+#chrome.switches=--window-size=1920,1080;--headless;
 
 
 #tests to run against Zallnium (added by vignesh nehru -refer pom config as well)
