--- a/qa-ui-automation/serenity.properties
+++ b/qa-ui-automation/serenity.properties
@@ -1,5 +1,7 @@
 webdriver.driver = chrome
-webdriver.chrome.driver = //Users//vignesh//PmkrHaulHubDemo///qa-ui-automation//drivers//chromedriver
+#webdriver.chrome.driver = //Users//vignesh//kautojul29///qa-ui-automation//drivers//chromedriver
+webdriver.chrome.driver = //Users//vignesh/kautojul29//haulhub_web_ui_automation//qa-ui-automation//drivers//chromedriver
+
 
 #tests to run against headless chrome (added by vignesh nehru)
 #chrome.switches=--window-size=1920,1080;--headless;
