--- a/qa-ui-automation/serenity.properties
+++ b/qa-ui-automation/serenity.properties
@@ -24,6 +24,8 @@ webdriver.wait.for.timeout = 20000
 serenity.restart.browser.for.each = NEVER
 
 webdriver.base.url = https://testing.haulhub.com/customer/login
+#webdriver.base.url = https://haulhub-staging-pr-7601.herokuapp.com/customer
+
 
 #webdriver.base.url = https://haulhub-staging-pr-7027.herokuapp.com/customer/login
 
