--- a/qa-ui-automation/serenity.properties
+++ b/qa-ui-automation/serenity.properties
@@ -1,18 +1,15 @@
 webdriver.driver = chrome
-#webdriver.chrome.driver = //Users//vignesh//kautojul29///qa-ui-automation//drivers//chromedriver
-webdriver.chrome.driver = //Users//vignesh/kautojul29//haulhub_web_ui_automation//qa-ui-automation//drivers//chromedriver
+webdriver.chrome.driver = ./drivers/chromedriver
 
+# uncomment the next line to run against headless chrome
+# chrome.switches=--window-size=1920,1080;--headless;
 
-#tests to run against headless chrome (added by vignesh nehru)
-#chrome.switches=--window-size=1920,1080;--headless;
+# tests to run against Zallnium (added by vignesh nehru -refer pom config as well)
+# webdriver.driver = remote
+# webdriver.remote.url = http://localhost:4444/wd/hub
+# webdriver.remote.driver = chrome
 
-
-#tests to run against Zallnium (added by vignesh nehru -refer pom config as well)
-#webdriver.driver = remote
-#webdriver.remote.url = http://localhost:4444/wd/hub
-#webdriver.remote.driver = chrome
-
-#webdriver.gecko.driver = MarionetteDriver
+# webdriver.gecko.driver = MarionetteDriver
 serenity.project.name = Haulhubautomation
 serenity.use.unique.browser = false
 serenity.verbose.steps = true
@@ -25,10 +22,8 @@ serenity.restart.browser.for.each = NEVER
 
 webdriver.base.url = https://testing.haulhub.com/customer/login
 
-#webdriver.base.url = https://haulhub-staging-pr-8073.herokuapp.com/customer/login
-
-#max.retries=2
-#junit.retry.tests=true
+# max.retries=2
+# junit.retry.tests=true
 serenity.test.root=net.palomar.showcase.cucumber.junit
 
 # How long does Serenity wait for elements that are not present on the screen to load
