--- a/qa-ui-automation/serenity.properties
+++ b/qa-ui-automation/serenity.properties
@@ -28,5 +28,7 @@ serenity.test.root=net.palomar.showcase.cucumber.junit
 
 # How long does Serenity wait for elements that are not present on the screen to load
 webdriver.timeouts.implicitlywait=2000
-serenity.take.screenshots=AFTER_EACH_STEP
+#serenity.take.screenshots=AFTER_EACH_STEP
 serenity.restart.browser.for.each = NEVER
+
+
