all the test suite changes incorpareted as per the empty database changes

--- a/qa-ui-automation/serenity-configs/environment_urls.conf
+++ b/qa-ui-automation/serenity-configs/environment_urls.conf
@@ -1,1 +1,8 @@
-staging = https://testing.haulhub.com/admin
+environments {
+    staging {
+        webdriver.base.url = "https://app.haulhub.com/admin"
+    }
+    prod {
+        webdriver.base.url = "https://app.haulhub.com/admin"
+    }
+}
