--- a/qa-ui-automation/serenity.properties
+++ b/qa-ui-automation/serenity.properties
@@ -1,4 +1,5 @@
 webdriver.driver = chrome
+#webdriver.chrome.driver = ./drivers/chromedriver
 
 # uncomment the next line to run against headless chrome
 # chrome.switches=--window-size=1920,1080;--headless;
@@ -19,7 +20,9 @@ serenity.timeout = 2000
 webdriver.wait.for.timeout = 2000
 serenity.restart.browser.for.each = NEVER
 
-webdriver.base.url = https://testing.haulhub.com/customer/login
+#webdriver.base.url = https://testing.haulhub.com/customer/login
+#webdriver.base.url = https://haulhub-staging-pr-8245.herokuapp.com/customer/login
+webdriver.base.url = https://haulhub-staging-pr-8245.herokuapp.com
 
 # max.retries=2
 # junit.retry.tests=true
