--- a/qa-ui-automation/serenity.properties
+++ b/qa-ui-automation/serenity.properties
@@ -1,5 +1,5 @@
 webdriver.driver = chrome
-#webdriver.chrome.driver = ./drivers/chromedriver
+webdriver.chrome.driver = ./drivers/chromedriver
 
 # uncomment the next line to run against headless chrome
 # chrome.switches=--window-size=1920,1080;--headless;
@@ -22,7 +22,10 @@ serenity.restart.browser.for.each = NEVER
 
 #webdriver.base.url = https://testing.haulhub.com/customer/login
 #webdriver.base.url = https://haulhub-staging-pr-8245.herokuapp.com/customer/login
-webdriver.base.url = https://haulhub-staging-pr-8245.herokuapp.com
+#webdriver.base.url = https://haulhub-staging-pr-8245.herokuapp.com
+webdriver.base.url = http://localhost.haulhub.com:3000
+#webdriver.base.url = http://localhost:8080
+
 
 # max.retries=2
 # junit.retry.tests=true
