deleted the driver

--- a/qa-ui-automation/serenity.properties
+++ b/qa-ui-automation/serenity.properties
@@ -1,5 +1,5 @@
 webdriver.driver = chrome
-webdriver.chrome.driver = ./drivers/chromedriver
+#webdriver.chrome.driver = ./drivers/chromedriver
 
 # uncomment the next line to run against headless chrome
 # chrome.switches=--window-size=1920,1080;--headless;
