--- a/qa-ui-automation/serenity.properties
+++ b/qa-ui-automation/serenity.properties
@@ -1,5 +1,5 @@
 webdriver.driver = chrome
-webdriver.chrome.driver = ./drivers/chromedriver
+#webdriver.chrome.driver = ./drivers/chromedriver
 
 # uncomment the next line to run against headless chrome
 # chrome.switches=--window-size=1920,1080;--headless;
@@ -28,7 +28,7 @@ serenity.test.root=net.palomar.showcase.cucumber.junit
 
 # How long does Serenity wait for elements that are not present on the screen to load
 webdriver.timeouts.implicitlywait=2000
-#serenity.take.screenshots=AFTER_EACH_STEP
+serenity.take.screenshots=AFTER_EACH_STEP
 serenity.restart.browser.for.each = NEVER
 
 
