new fixes for hh-4564 branch

--- a/qa-ui-automation/serenity.properties
+++ b/qa-ui-automation/serenity.properties
@@ -22,9 +22,12 @@ serenity.restart.browser.for.each = NEVER
 
 #webdriver.base.url = https://testing.haulhub.com/customer/login
 #webdriver.base.url = https://haulhub-staging-pr-8245.herokuapp.com/customer/login
-#webdriver.base.url = https://haulhub-staging-pr-8245.herokuapp.com
-webdriver.base.url = http://localhost.haulhub.com:3000
-#webdriver.base.url = http://localhost:8080
+#webdriver.base.url = https://haulhub-staging-pr-8367.herokuapp.com
+#webdriver.base.url = https://haulhub-staging-pr-8367.herokuapp.com:443
+webdriver.base.url = https://staging.haulhub.com
+
+
+
 
 
 # max.retries=2
