Change jobslip My project page

--- a/qa-ui-automation/serenity.properties
+++ b/qa-ui-automation/serenity.properties
@@ -1,6 +1,6 @@
 webdriver.driver = chrome
 #webdriver.chrome.driver = ./drivers/chromedriver
-#webdriver.chrome.driver = drivers/chromedriver.exe
+webdriver.chrome.driver = drivers/chromedriver.exe
 
 # uncomment the next line to run against headless chrome
 # chrome.switches=--window-size=1920,1080;--headless;
@@ -21,12 +21,12 @@ serenity.timeout = 2000
 webdriver.wait.for.timeout = 2000
 serenity.restart.browser.for.each = NEVER
 
-webdriver.base.url = https://testing.haulhub.com
+#webdriver.base.url = https://testing.haulhub.com
 #webdriver.base.url = https://haulhub-staging-pr-8245.herokuapp.com/customer/login
 #webdriver.base.url = https://haulhub-staging-pr-8367.herokuapp.com
 #webdriver.base.url = https://haulhub-staging-pr-8367.herokuapp.com:443
 #webdriver.base.url = https://staging.haulhub.com
-
+webdriver.base.url = https://testing.jobslip.com
 
 
 
