--- a/qa-ui-automation/serenity.properties
+++ b/qa-ui-automation/serenity.properties
@@ -21,12 +21,12 @@ serenity.timeout = 2000
 webdriver.wait.for.timeout = 2000
 serenity.restart.browser.for.each = NEVER
 
-webdriver.base.url = https://testing.haulhub.com
+#webdriver.base.url = https://testing.haulhub.com
 #webdriver.base.url = https://haulhub-staging-pr-8245.herokuapp.com/customer/login
 #webdriver.base.url = https://haulhub-staging-pr-8367.herokuapp.com
 #webdriver.base.url = https://haulhub-staging-pr-8367.herokuapp.com:443
 #webdriver.base.url = https://staging.haulhub.com
-#webdriver.base.url = https://testing.jobslip.com
+webdriver.base.url = https://testing.jobslip.com
 
 
 
