DelDOT Framework with 3 logins.

--- a/qa-ui-automation/serenity.properties
+++ b/qa-ui-automation/serenity.properties
@@ -26,8 +26,8 @@ serenity.restart.browser.for.each = NEVER
 #webdriver.base.url = https://haulhub-staging-pr-8367.herokuapp.com
 #webdriver.base.url = https://haulhub-staging-pr-8367.herokuapp.com:443
 #webdriver.base.url = https://staging.haulhub.com
-webdriver.base.url = https://testing.jobslip.com
-
+#webdriver.base.url = https://testing.jobslip.com
+webdriver.base.url = https://testing.mydotportal.com
 
 
 
