Changes for preload customer

--- a/qa-ui-automation/serenity.properties
+++ b/qa-ui-automation/serenity.properties
@@ -1,5 +1,5 @@
 webdriver.driver = chrome
-#webdriver.chrome.driver = ./drivers/chromedriver
+webdriver.chrome.driver = ./drivers/chromedriver
 #webdriver.chrome.driver = drivers/chromedriver.exe
 
 # uncomment the next line to run against headless chrome
@@ -21,13 +21,13 @@ serenity.timeout = 2000
 webdriver.wait.for.timeout = 2000
 serenity.restart.browser.for.each = NEVER
 
-#webdriver.base.url = https://testing.haulhub.com
-#webdriver.base.url = https://haulhub-staging-pr-8245.herokuapp.com/customer/login
+#webdriver.base.url =  https://testing.haulhub.com
+webdriver.base.url =   https://fix-customer-dropdown.staging.haulhub.com/
 #webdriver.base.url = https://haulhub-staging-pr-8367.herokuapp.com
 #webdriver.base.url = https://haulhub-staging-pr-8367.herokuapp.com:443
 #webdriver.base.url = https://staging.haulhub.com
 #webdriver.base.url = https://testing.jobslip.com
-webdriver.base.url = https://testing.mydotportal.com
+#webdriver.base.url = https://testing.mydotportal.com
 
 
 
